[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/SF1/ShiningForceMenuBorder.png" type="Texture" id=1]
[ext_resource path="res://Assets/SF1/PlayableCharacters/Hans/Unpromoted_Portraits.png" type="Texture" id=2]
[ext_resource path="res://Assets/SF1/ShiningForceTextBackground.png" type="Texture" id=3]
[ext_resource path="res://Assets/SF1/ShiningForceMenuFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://General/BattleActionsMenu/RedSelectionBorder/RedSelectionLongBorder.tscn" type="PackedScene" id=5]
[ext_resource path="res://General/OverworldMenus/MemberListView/MemberListView.gd" type="Script" id=6]

[node name="MemberListViewNodeRoot" type="Node2D"]
script = ExtResource( 6 )

[node name="PortraitWrapperNode" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="PortraitSprite" type="Sprite" parent="PortraitWrapperNode"]
position = Vector2( 20.7908, 33.5002 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )
hframes = 4
__meta__ = {
"_edit_lock_": true
}

[node name="PortraitNinePatchRect" type="NinePatchRect" parent="PortraitWrapperNode"]
margin_top = 6.0
margin_right = 55.0
margin_bottom = 77.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StatNinePatchRect" type="NinePatchRect" parent="."]
margin_left = 40.0
margin_top = 6.0
margin_right = 392.0
margin_bottom = 104.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 8.0
margin_top = 7.0
margin_right = 40.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 4 )
text = "NAME"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ClassLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 133.333
margin_top = 7.0
margin_right = 173.333
margin_bottom = 15.0
custom_fonts/font = ExtResource( 4 )
text = "CLASS"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LevelStaticLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 303.333
margin_top = 7.0
margin_right = 319.333
margin_bottom = 15.0
custom_fonts/font = ExtResource( 4 )
text = "LV"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 295.0
margin_top = 7.0
margin_right = 344.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 4 )
text = "1"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MagicStaticLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 8.0
margin_top = 21.3333
margin_right = 48.0
margin_bottom = 29.3333
custom_fonts/font = ExtResource( 4 )
text = "MAGIC"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MagicNothingStaticLabel" type="Label" parent="StatNinePatchRect"]
visible = false
margin_left = 8.0
margin_top = 34.6667
margin_right = 64.0
margin_bottom = 42.6667
custom_colors/font_color = Color( 0.952941, 0.670588, 0.305882, 1 )
custom_fonts/font = ExtResource( 4 )
text = "NOTHING"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SpellsVBoxContainer" type="VBoxContainer" parent="StatNinePatchRect"]
margin_left = 8.0
margin_top = 35.0
margin_right = 171.0
margin_bottom = 88.0
custom_constants/separation = 15
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Test_DONT_USE_Control" type="Control" parent="StatNinePatchRect/SpellsVBoxContainer"]
visible = false
margin_right = 163.0

[node name="SpellLabel" type="Label" parent="StatNinePatchRect/SpellsVBoxContainer/Test_DONT_USE_Control"]
margin_right = 109.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 4 )
text = "MAGIC"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LevelStaticLabel" type="Label" parent="StatNinePatchRect/SpellsVBoxContainer/Test_DONT_USE_Control"]
margin_left = 119.989
margin_top = -0.328068
margin_right = 135.989
margin_bottom = 7.67193
custom_fonts/font = ExtResource( 4 )
text = "LV"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="StatNinePatchRect/SpellsVBoxContainer/Test_DONT_USE_Control"]
margin_left = 131.0
margin_right = 152.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 4 )
text = "1"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ItemsStaticLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 173.0
margin_top = 21.3333
margin_right = 213.0
margin_bottom = 29.3333
custom_fonts/font = ExtResource( 4 )
text = "ITEMS"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ItemsNothingStaticLabel" type="Label" parent="StatNinePatchRect"]
visible = false
margin_left = 174.333
margin_top = 34.6667
margin_right = 230.333
margin_bottom = 42.6667
custom_colors/font_color = Color( 0.952941, 0.670588, 0.305882, 1 )
custom_fonts/font = ExtResource( 4 )
text = "NOTHING"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="InventoryVBoxContainer" type="VBoxContainer" parent="StatNinePatchRect"]
margin_left = 175.0
margin_top = 35.0
margin_right = 342.0
margin_bottom = 88.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Test_DONT_USE_Control" type="Control" parent="StatNinePatchRect/InventoryVBoxContainer"]
visible = false
margin_right = 167.0

[node name="EquippedStaticLabel" type="Label" parent="StatNinePatchRect/InventoryVBoxContainer/Test_DONT_USE_Control"]
margin_left = -1.0
margin_right = 7.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0.952941, 0.670588, 0.305882, 1 )
custom_fonts/font = ExtResource( 4 )
text = "E"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ItemLabel" type="Label" parent="StatNinePatchRect/InventoryVBoxContainer/Test_DONT_USE_Control"]
margin_left = 11.0
margin_right = 167.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 4 )
text = "ITEM"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatNinePatchRect2" type="NinePatchRect" parent="."]
margin_top = 79.0
margin_right = 405.0
margin_bottom = 207.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NameClassLevelWrapperNode" type="Node2D" parent="StatNinePatchRect2"]
__meta__ = {
"_edit_lock_": true
}

[node name="NameStaticLabel" type="Label" parent="StatNinePatchRect2/NameClassLevelWrapperNode"]
margin_left = 18.6667
margin_top = 9.33332
margin_right = 50.6667
margin_bottom = 17.3333
custom_fonts/font = ExtResource( 4 )
text = "NAME"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ClassStaticLabel" type="Label" parent="StatNinePatchRect2/NameClassLevelWrapperNode"]
margin_left = 140.333
margin_top = 9.0
margin_right = 228.333
margin_bottom = 17.0
custom_fonts/font = ExtResource( 4 )
text = "CLASS"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LevelStaticLabel" type="Label" parent="StatNinePatchRect2/NameClassLevelWrapperNode"]
margin_left = 366.666
margin_top = 7.66666
margin_right = 382.666
margin_bottom = 15.6667
custom_fonts/font = ExtResource( 4 )
text = "LV"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="StatNinePatchRect2"]
margin_left = 8.0
margin_top = 25.0
margin_right = 397.0
margin_bottom = 119.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StatNinePatchRect2/ScrollContainer"]
custom_constants/separation = 16
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Test_NOT-USED_CharacterWrapperNode" type="Control" parent="StatNinePatchRect2/ScrollContainer/VBoxContainer"]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="NameStaticLabel" type="Label" parent="StatNinePatchRect2/ScrollContainer/VBoxContainer/Test_NOT-USED_CharacterWrapperNode"]
margin_left = 10.6667
margin_top = 4.00001
margin_right = 42.6667
margin_bottom = 12.0
custom_fonts/font = ExtResource( 4 )
text = "NAME"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ClassStaticLabel" type="Label" parent="StatNinePatchRect2/ScrollContainer/VBoxContainer/Test_NOT-USED_CharacterWrapperNode"]
margin_left = 132.333
margin_top = 3.66663
margin_right = 220.333
margin_bottom = 11.6666
custom_fonts/font = ExtResource( 4 )
text = "CLASS"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LevelStaticLabel" type="Label" parent="StatNinePatchRect2/ScrollContainer/VBoxContainer/Test_NOT-USED_CharacterWrapperNode"]
margin_left = 333.0
margin_top = 4.0
margin_right = 374.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 4 )
text = "LV"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RedSelectionBorderRoot" parent="." instance=ExtResource( 5 )]
position = Vector2( 10, 96 )
